<?xml version="1.0"?>
<package>
    <name>uwb_comm_base</name>
    <version>0.1.0</version>
    <description>UWB package for simulation</description>
    <license>TODO</license>
    <author email="funabiki@space.t.u-tokyo.ac.jp">Nobuhiro Funabiki</author>
    <maintainer email="funabiki@space.t.u-tokyo.ac.jp">Nobuhiro Funabiki</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>uwb_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>uwb_msgs</run_depend>

    <export></export>
</package>